--- a/Project/frontend/app/HeaderSimple.module.css
+++ b/Project/frontend/app/HeaderSimple.module.css
@@ -1,3 +1,5 @@
+/* CSS File for global header*/
+
 .header {
   height: 60px;
   margin-bottom: 0; /* Remove margin to connect the header and section */
@@ -54,14 +56,16 @@
   margin-top: 10px; /* Optional: Adds spacing above the description */
 }
 
+/* Background code (should be moved onto a seperate file) */
 .section {
-  background: linear-gradient(to bottom, rgba(72, 152, 199, 0.8), rgba(33, 46, 98, 0)); /* Blue fade effect */
+  background: linear-gradient(to bottom, rgba(73, 141, 224, 0.874), rgba(170, 63, 118, 0.4)); /* Blue fade effect */
   min-height: calc(100vh - 56px); /* Make the section cover the full viewport height minus the header */
   padding: 20px; /* Optional: Adds padding inside the section */
   display: flex;
   flex-direction: column;
   justify-content: center; /* Center content vertically if desired */
 }
+
 
 @media (max-width: 768px) {
   .inner {
