--- a/Project/frontend/app/Ourmission.module.css
+++ b/Project/frontend/app/Ourmission.module.css
@@ -1,6 +1,8 @@
 .section {
-    padding-top: 100px;
+    padding-top: 50px;
     padding-left: 100px;
     padding-right: 100px;
-    padding-bottom: 500px;
+    min-height: calc(100vh); /* Make the section cover the full viewport height minus the header */
+    display: flex;
+    flex-direction: column;
 }
