--- a/Project/frontend/app/preferences/style.module.css
+++ b/Project/frontend/app/preferences/style.module.css
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  height: 100vh;
 }
   
 .homepageTitle {
